fix overflow TopNav

--- a/src/components/Category/styles/TopNav.module.css
+++ b/src/components/Category/styles/TopNav.module.css
@@ -91,7 +91,6 @@
 }
 .mobile-dropdown-list {
   background-color: #082b40;
-  overflow-y: scroll;
   width: 100%;
   position: absolute;
   padding: 0 1rem;
@@ -111,7 +110,6 @@
 }
 .mobile-dropdown-content {
   margin-top: 5px;
-  overflow-y: scroll;
 }
 .mobile-dropdown-content li {
   list-style-type: none;
