--- a/src/styles/Category.module.css
+++ b/src/styles/Category.module.css
@@ -11,6 +11,3 @@
   justify-content: center;
   margin-top: 20px;
 }
-.hidden {
-  overflow-y: hidden;
-}
